--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     background-color: whitesmoke;
-    min-height: 1000px;
+    min-height: 900px;
 }
 
 .banner {
@@ -27,6 +27,18 @@ body {
     padding-left: 1.5em;
     padding-top: 0.3em;
     padding-bottom: 0.5em;
+    font-family: Helvetica, sans-serif;
+    font-weight: lighter;
+    font-size: xx-large;
+}
+
+.embassymap {
+    padding-left: 1.5em;
+    padding-top: 2em;
+    font-family: Helvetica, sans-serif;
+    font-weight: lighter;
+    font-size: medium;
+    margin-left: 2em;
 }
 
 .container-main {
@@ -67,14 +79,17 @@ footer {
     bottom: 0;
     position: fixed;
     width: 100%;
+    height: 3em;
     background-color: #2e3138;
     color: white;
     font-size: medium;
-    padding: 0.2em;
+    padding-top: 0.7em;
+    font-family: Helvetica, sans-serif;
+    font-weight: lighter;
 }
 
 footer p {
-    margin: 0;
+    margin-bottom: 3em;
 }
 
 .profile-info {
@@ -115,6 +130,11 @@ footer p {
 
 #dependentSelector {
     width: 250px;
+}
+
+.tarjeta {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight:lighter ;
 }
 
 .foto-tarjeta {
@@ -195,6 +215,8 @@ a {
 	padding-left: 18px;
 	border-radius: 0px;
     text-decoration: none;
+    font-family: Helvetica, sans-serif;
+    font-weight: lighter;
 }
 .barra-navegacion ul, .barra-navegacion li {
 	margin: 0 auto;
@@ -223,6 +245,8 @@ a {
     font-size: 1.2em;
 	background: whitesmoke;
     transition: 0.5s;
+    font-family: Helvetica, sans-serif;
+    font-weight: lighter;
 }
 
 /* BARRA DE NAVEGACION PRINCIPAL */
@@ -234,6 +258,8 @@ a {
 	padding-left: 18px;
 	border-radius: 0px;
     text-decoration: none;
+    font-family: Helvetica, sans-serif;
+    font-weight: lighter;
 }
 .barra-navegacion1 ul, .barra-navegacion1 li {
 	margin: 0 auto;
@@ -268,12 +294,94 @@ a {
     font-size: xx-large;
     font-style: italic;
     text-align: center;
-    padding-top: 0.2em;
-    padding-bottom: 0.2em;
+    padding-top: 0.5em;
     padding-left: 0.7em;
     padding-right: 0.7em;
     color: white;
     background-color: #2e3138;
-    min-height: 2em;
+    min-height: 1.5em;
     min-width: 570px;
+    font-family: Helvetica, sans-serif;
+    font-weight: lighter;
 }
+
+.google-map {
+    margin: 1em;
+    border-radius: 10px;
+    margin-bottom: 5em;
+    box-shadow:
+  2.5px 3px 1.3px rgba(0, 0, 0, 0.056),
+  6.1px 7.2px 4.4px rgba(0, 0, 0, 0.081),
+  11.5px 13.5px 10.5px rgba(0, 0, 0, 0.1),
+  20.5px 24.1px 22.1px rgba(0, 0, 0, 0.119),
+  38.4px 45.1px 45.5px rgba(0, 0, 0, 0.144),
+  92px 108px 112px rgba(0, 0, 0, 0.2);
+}
+
+/* CONTACT FORM */
+.return-button {
+    border:#6d0404 2px solid;
+    color: white;
+    background-color: #a33232;
+    border-radius: 10px;
+    padding: 0.7em 2em;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-left: 4em;
+    margin-top: 1em;
+    cursor: pointer;
+}
+
+.contact-us {
+    margin-top: 1em;
+    margin-bottom: 1em;
+    font-family: Helvetica, sans-serif;
+    font-size: xx-large;
+}
+
+.contact-form {
+    margin-left: 4em;
+}
+
+.contact-form-field {
+    width: 400px;
+    height: 2em;
+    margin-bottom: 1.2em;
+}
+
+.contact-form-field2 {
+    width: 600px;
+    height: 200px;
+    margin-bottom: 0.5em;
+}
+
+.label-contact {
+    font-family: Helvetica, sans-serif;
+}
+
+.contact-form-submit {
+    color: white;
+    background-color: #13378b;
+    border-radius: 10px;
+    padding: 0.5em 1.5em;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    border: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
